--- a/Front-End/lammah/src/public/assets/locales/en/translation.json
+++ b/Front-End/lammah/src/public/assets/locales/en/translation.json
@@ -76,5 +76,7 @@
     "your_email_or_password_is_wrong": "Your email or password is wrong",
     "please_enter_your_email": "Please Enter your email",
     "if_you_want_to_contant_facility_owner": "If you want to contant facility owner",
-    "go_to_your_page_and_you_can_find_his_contact_information": "Go to your Page and you can find his contact information"
+    "go_to_your_page_and_you_can_find_his_contact_information": "Go to your Page and you can find his contact information",
+    "top_facilities": "TOP FACILITIES",
+    "this_month": "THIS Month"
   }
