--- a/Front-End/lammah/src/public/assets/locales/en/translation.json
+++ b/Front-End/lammah/src/public/assets/locales/en/translation.json
@@ -3,7 +3,7 @@
     "please_enter_name": "Please enter your name",
     "facilities": "FACILITIES",
     "facility": "Facility",
-    "my_requests": "MY REQUESTS",
+    "my_requests": "MANAGE FACILITIES",
     "my_page": "MY PAGE",
     "new_facility": "NEW FACILITY",
     "logout": "LOGOUT",
