--- a/Front-End/lammah/src/public/assets/locales/ar/translation.json
+++ b/Front-End/lammah/src/public/assets/locales/ar/translation.json
@@ -78,5 +78,6 @@
     "if_you_want_to_contant_facility_owner": "للتواصل مع صاحب المنشأة",
     "go_to_your_page_and_you_can_find_his_contact_information": "يمكنك ايجاد معلومات التواصل في صفحتك الشخصية",
     "top_facilities": "المنشآت الأعلى تقييم",
-    "this_month": "الشهر الحالي"
+    "this_month": "الشهر الحالي",
+    "you_dont_have_any_appointment_yet": "أنت لا تملك أي حجوزات في الوقت الحالي"
   }
