--- a/Front-End/lammah/src/public/assets/locales/en/translation.json
+++ b/Front-End/lammah/src/public/assets/locales/en/translation.json
@@ -78,5 +78,6 @@
     "if_you_want_to_contant_facility_owner": "If you want to contant facility owner",
     "go_to_your_page_and_you_can_find_his_contact_information": "Go to your Page and you can find his contact information",
     "top_facilities": "TOP FACILITIES",
-    "this_month": "THIS Month"
+    "this_month": "THIS Month",
+    "you_dont_have_any_appointment_yet": "you don't have any appointment yet"
   }
