--- a/Front-End/lammah/src/public/assets/locales/ar/translation.json
+++ b/Front-End/lammah/src/public/assets/locales/ar/translation.json
@@ -79,5 +79,7 @@
     "go_to_your_page_and_you_can_find_his_contact_information": "يمكنك ايجاد معلومات التواصل في صفحتك الشخصية",
     "top_facilities": "المنشآت الأعلى تقييم",
     "this_month": "الشهر الحالي",
-    "you_dont_have_any_appointment_yet": "أنت لا تملك أي حجوزات في الوقت الحالي"
+    "you_dont_have_any_appointment_yet": "أنت لا تملك أي حجوزات في الوقت الحالي",
+    "top_facilities_description": "لإعتقادنا بإهمية التواصل الإجتماعي. لمة تصلك لإكثر من 100 شالية ومخيم حول المملكة العربية السعودية بطريقة سهلة للإجتماع بعائلتك وأصدقائك.",
+    "header_main_description": " لمة تصلك لإكثر من 100 شالية ومخيم حول المملكة العربية السعودية بطريقة سهلة للإجتماع بعائلتك وأصدقائك"
   }
