--- a/Front-End/lammah/src/public/assets/locales/en/translation.json
+++ b/Front-End/lammah/src/public/assets/locales/en/translation.json
@@ -79,5 +79,7 @@
     "go_to_your_page_and_you_can_find_his_contact_information": "Go to your Page and you can find his contact information",
     "top_facilities": "TOP FACILITIES",
     "this_month": "THIS Month",
-    "you_dont_have_any_appointment_yet": "you don't have any appointment yet"
+    "you_dont_have_any_appointment_yet": "you don't have any appointment yet",
+    "top_facilities_description": "Because we Know how social life is important, so Lammah gives you the opportunity to access more than 100 chalets and camps around Kingdom of Saudi Arabia in an easy way to get comfortable meetings with your families and your friends .",
+    "header_main_description": "Lammah gives you the opportunity to access more than 100 chalets and camps around Saudi Arabia in an easy way to get comfortable meetings with your families and your friends"
   }
